welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: not found: value vuBiscuit
  if(vuBiscuit=true){
     ^Program:11: error: type mismatch;
 found   : Unit
 required: Boolean
  	avance();
              ^